# chatshell-desktop

./: .eslintrc.json  .gitignore  .gitlab-ci.yml  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/builtin-skills/skill-installer/: SKILL.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  db.rs  keychain.rs  keyring_store.rs  lib.rs  logger.rs  main.rs  models.rs  prompts.rs  scraper.rs  storage.rs  thinking_parser.rs  tokenizer.rs  web_fetch.rs  web_search.rs
src-tauri/src/commands/: assistants.rs  attachments.rs  capabilities.rs  contexts.rs  conversation_settings.rs  conversations.rs  crypto.rs  mcp.rs  messages.rs  mod.rs  model_fetch.rs  model_parameter_presets.rs  models.rs  prompts.rs  providers.rs  resources.rs  search.rs  settings.rs  skills.rs  steps.rs  users.rs
src-tauri/src/db/: assistants.rs  attachments.rs  contexts.rs  conversation_settings.rs  conversations.rs  fetch_results.rs  messages.rs  mod.rs  model_parameter_presets.rs  models.rs  prompts.rs  providers.rs  schema.rs  search_results.rs  seed.rs  settings.rs  skills.rs  steps.rs  tools.rs  users.rs
src-tauri/src/llm/: agent_builder.rs  agent_streaming.rs  anthropic.rs  azure.rs  capabilities.rs  cohere.rs  common.rs  deepseek.rs  galadriel.rs  gemini.rs  groq.rs  hyperbolic.rs  minimax.rs  minimax_cn.rs  mira.rs  mistral.rs  mod.rs  models.rs  moonshot.rs  ollama.rs  ollama_rig.rs  openai.rs  openai_compat.rs  (+7 more)
(+368 files in other folders)
